--- a/WlanLoginBypass/WlanLoginBypass.vcxproj
+++ b/WlanLoginBypass/WlanLoginBypass.vcxproj
@@ -22,12 +22,14 @@
     <ClCompile Include="source\Adapter.cpp" />
     <ClCompile Include="source\Client.cpp" />
     <ClCompile Include="source\ClientFinder.cpp" />
-    <ClCompile Include="source\winMain.cpp" />
+    <ClCompile Include="source\ClientTester.cpp" />
+    <ClCompile Include="winMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Adapter.h" />
     <ClInclude Include="source\Client.h" />
     <ClInclude Include="source\ClientFinder.h" />
+    <ClInclude Include="source\ClientTester.h" />
     <ClInclude Include="source\IpAddress.h" />
     <ClInclude Include="source\MacAddress.h" />
   </ItemGroup>
@@ -122,6 +124,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -136,6 +139,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
