--- a/WlanLoginBypass/WlanLoginBypass.vcxproj
+++ b/WlanLoginBypass/WlanLoginBypass.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\Adapter.cpp" />
+    <ClCompile Include="source\Application.cpp" />
     <ClCompile Include="source\Client.cpp" />
     <ClCompile Include="source\ClientFinder.cpp" />
     <ClCompile Include="source\ClientTester.cpp" />
@@ -27,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Adapter.h" />
+    <ClInclude Include="source\Application.h" />
     <ClInclude Include="source\Client.h" />
     <ClInclude Include="source\ClientFinder.h" />
     <ClInclude Include="source\ClientTester.h" />
